# GitHubCodeChat

./: .cursorignore  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt
Instructions/: sample_jsonb.jsonb
attached_assets/: App.tsx  Login.tsx  Pasted--Pinecone-Vector-Store-If-you-re-opening-this-Notebook-on-colab-you-will-probably-need-to-install-L-1739213262101.txt  Pasted--pgvector-Open-source-vector-similarity-search-for-Postgres-Store-your-vectors-with-the-rest-of-y-1739212707319.txt  Pasted-1-13-02-AM-express-Incoming-request-POST-api-chat-message-1-13-02-AM-fastapi-Python-2025-02-1-1739409216143.txt  Pasted-1-14-50-AM-express-Incoming-request-POST-api-chat-message-1-14-50-AM-fastapi-Python-2025-02-1-1739409308729.txt  Pasted-1-15-47-AM-fastapi-Python-2025-02-13-01-15-47-963-backend-api-routes-chat-INFO-Processing-c-1739409395133.txt  Pasted-10-37-00-PM-express-Incoming-request-GET-api-github-repositories-10-37-01-PM-fastapi-Python-er-1739227252004.txt  Pasted-6-11-10-PM-express-serving-on-port-5000-6-11-13-PM-express-GET-api-repositories-304-in-138ms--1739211099855.txt  Pasted-6-14-34-PM-fastapi-Python-error-Traceback-most-recent-call-last-File-frozen-runpy-line--1739211299029.txt  Pasted-A-very-popular-solution-is-to-use-react-markdown-combined-with-plugins-for-extended-syntax-such-as--1739229072292.txt  Pasted-In-this-notebook-we-are-going-to-show-how-to-use-Postgresql-and-pgvector-to-perform-vector-searches--1739212161722.txt  auth.tsx  (+5 more)
backend/: check_db.py  schema.sql  test_github.py
client/: test.html
server/: index.ts  (+2 more)
(+45 files in other folders)
